--- a/.gitattributes
+++ b/.gitattributes
@@ -41,3 +41,6 @@
 *.pkl filter=lfs diff=lfs merge=lfs -text
 # numpy file format
 *.npy filter=lfs diff=lfs merge=lfs -text
+# GitHub syntax highlighting
+pixi.lock linguist-language=YAML
+
