--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,29 @@
 [project]
 name = "python_template"
-version = "0.2.0"
-
-authors = [{ name = "Austin Gregg-Smith", email = "blooop@gmail.com" }]
+version = "1.0.0"
 description = "A python package template"
+authors = [{name = "Austin Gregg-Smith", email = "blooop@gmail.com"}]
+requires-python = ">= 3.10"
 readme = "README.md"
+dependencies = []
 
-requires-python = ">=3.10"
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
 
-dependencies = ["numpy>=1.2,<=1.26.4"]
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
+
+[tool.pixi.pypi-dependencies]
+python_template = { path = ".", editable = true }
+
+[tool.pixi.tasks]
+
+[tool.pixi.dependencies]
+
+[tool.setuptools.packages.find]
+include= ["python_template"]
 
 [project.optional-dependencies]
 test = [
@@ -21,17 +36,17 @@ test = [
   "coverage>=7.2.7,<=7.5.1",
 ]
 
+# Environments
+[tool.pixi.environments]
+default = { solve-group = "default" }
+test = { features = ["test"], solve-group = "default" }
+
+[tool.pixi.feature.test.tasks]
+test = "pytest"
+
 [project.urls]
 Source = "https://github.com/blooop/python_template"
 Home = "https://github.com/blooop/python_template"
-
-
-[tool.flit.module]
-name = "python_template"
-
-[build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
 
 
 [tool.pylint]
@@ -50,13 +65,13 @@ line-length = 100
 #"F841" will auto remove unused variables which is annoying during development, pylint catches this anyway
 lint.ignore = ["E501", "E902", "F841"]
 
+# Allow unused variables when underscore-prefixed.
+lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
 # Same as Black.
 line-length = 100
 
 target-version = "py310"
-
-# Allow unused variables when underscore-prefixed.
-lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 # Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
 [tool.ruff.lint.per-file-ignores]
