--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           pixi-version: v0.22.0
           cache: true
-          auth-host: prefix.dev
+          cache-write: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
           auth-token: ${{ secrets.PREFIX_DEV_TOKEN }}
       - name: Format and lint
         run: |
