--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
           pixi-version: v0.22.0
           cache: true
           cache-write: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+          auth-host: prefix.dev
           auth-token: ${{ secrets.PREFIX_DEV_TOKEN }}
       - name: Format and lint
         run: |
