--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pixi
-        uses: prefix-dev/setup-pixi@v0.7.0
+      - uses: prefix-dev/setup-pixi@v0.8.0
         with:
           pixi-version: v0.22.0
           cache: true
-          cache-write: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
           auth-host: prefix.dev
           auth-token: ${{ secrets.PREFIX_DEV_TOKEN }}
+      - run: pixi run test
       - name: Format and lint
         run: |
           pixi run fmt
