--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,9 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: CI
-
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]  
-
-permissions:
-  contents: read
-
 
 jobs:
   ci:
@@ -19,59 +11,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - uses: prefix-dev/setup-pixi@v0.8.0
-        with:
-          pixi-version: v0.22.0
-          cache: true
-          auth-host: prefix.dev
-          auth-token: ${{ secrets.PREFIX_DEV_TOKEN }}
-      - run: pixi run test
+      - name: Setup Pixi
+        uses: prefix-dev/setup-pixi@v0.5.1
       - name: Format and lint
         run: |
           pixi run fmt
-          pixi run lint 
+          pixi run lint     
+      - name: Test recipe schema
+        run: |
+          pixi run test
       - name: Assert no changes
         run: |
-            git diff --exit-code     
-      - name: Test
-        run: |
-          pixi run coverage      
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
-# jobs:
-  
-
-#   black:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: psf/black@stable
-#   ruff:
-#     runs-on: ubuntu-latest
-#     needs: [black]
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: chartboost/ruff-action@v1
-#   build:
-#     runs-on: ubuntu-latest
-#     needs: [ruff]
-#     steps:
-#     - uses: actions/checkout@v3
-#     - name: Set up Python 3.10
-#       uses: actions/setup-python@v3
-#       with:
-#         python-version: "3.10"
-#     - name: Install dependencies
-#       run: |
-#         python -m pip install --upgrade pip
-#         pip install flit
-#         flit install --extras test
-#     - run: |
-#         pylint $(git ls-files '*.py')
-#     - name: Test with pytest
-#       run: |
-#         coverage run -m pytest
-    
+          git diff --exit-code
