--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - uses: prefix-dev/setup-pixi@v0.8.0
+        # with:
+          # pixi-version: v0.22.0
+          # cache: true
+          # auth-host: prefix.dev
+          # auth-token: ${{ secrets.PREFIX_DEV_TOKEN }}
+      - run: pixi run test
+      - name: Format and lint
+        run: |
+          pixi run fmt
+          pixi run lint 
+      - name: Assert no changes
+        run: |
+            git diff --exit-code     
+      - name: Test
+        run: |
+          pixi run coverage      
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
