--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: setup-pixi
-        uses: prefix-dev/setup-pixi
+      - name: Setup Pixi
+        uses: prefix-dev/setup-pixi@v0.7.0
         with:
-          pixi-version: v0.22.0
           cache: true
           auth-host: prefix.dev
           auth-token: ${{ secrets.PREFIX_DEV_TOKEN }}
-      - run: pixi run test
       - name: Format and lint
         run: |
           pixi run fmt
@@ -42,3 +40,37 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
+# jobs:
+  
+
+#   black:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: psf/black@stable
+#   ruff:
+#     runs-on: ubuntu-latest
+#     needs: [black]
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: chartboost/ruff-action@v1
+#   build:
+#     runs-on: ubuntu-latest
+#     needs: [ruff]
+#     steps:
+#     - uses: actions/checkout@v3
+#     - name: Set up Python 3.10
+#       uses: actions/setup-python@v3
+#       with:
+#         python-version: "3.10"
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install flit
+#         flit install --extras test
+#     - run: |
+#         pylint $(git ls-files '*.py')
+#     - name: Test with pytest
+#       run: |
+#         coverage run -m pytest
+    
