--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "python_template"
 version = "1.0.0"
 description = "A python package template"
 authors = [{name = "Austin Gregg-Smith", email = "blooop@gmail.com"}]
-requires-python = ">= 3.10"
+requires-python = ">=3.10"
 readme = "README.md"
 dependencies = []
 
@@ -27,13 +27,13 @@ include= ["python_template"]
 
 [project.optional-dependencies]
 test = [
-  "black>=23,<=24.4.2",
-  "pylint>=2.16,<=3.1.0",
-  "pytest-cov>=4.1,<=5.0.0",
-  "pytest>=7.4,<=8.2.0",
-  "hypothesis>=6.82,<=6.100.5",
-  "ruff>=0.0.280,<=0.4.3",
-  "coverage>=7.2.7,<=7.5.1",
+  "black",
+  "pylint",
+  "pytest-cov",
+  "pytest",
+  "hypothesis",
+  "ruff",
+  "coverage",
 ]
 
 # Environments
