--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,7 @@ platforms = ["linux-64"]
 python_template = { path = ".", editable = true }
 
 [tool.pixi.tasks]
+
+
+[tool.setuptools.packages.find]
+include= ["python_template"]
