--- a/1pyproject.toml
+++ b/1pyproject.toml
@@ -1,3 +1,47 @@
 
 
 
+
+
+
+[tool.pylint]
+extension-pkg-whitelist = ["numpy"]
+jobs = 16                           #detect number of cores
+
+[tool.pylint.'MESSAGES CONTROL']
+disable = "C,logging-fstring-interpolation,line-too-long,fixme,broad-exception-caught,missing-module-docstring,too-many-instance-attributes,too-few-public-methods,too-many-arguments,too-many-locals,too-many-branches,too-many-statements,use-dict-literal,cyclic-import,duplicate-code,too-many-public-methods"
+enable = "no-else-return,consider-using-in"
+
+[tool.black]
+line-length = 100
+
+[tool.ruff]
+# Never enforce `E501` (line length violations).
+#"F841" will auto remove unused variables which is annoying during development, pylint catches this anyway
+lint.ignore = ["E501", "E902", "F841"]
+
+# Allow unused variables when underscore-prefixed.
+lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+# Same as Black.
+line-length = 100
+
+target-version = "py310"
+
+# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["E402", "F401"]
+
+
+[tool.coverage.run]
+omit = ["*/test/*", "__init__.py"]
+
+[tool.coverage.report]
+exclude_also = [
+  "def __repr__",
+  "if False:",
+  "if 0:",
+  "raise AssertionError",
+  "raise NotImplementedError",
+  "if __name__ == .__main__.:",
+]
