--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,10 +66,10 @@ line-length = 100
 [tool.ruff]
 # Never enforce `E501` (line length violations).
 #"F841" will auto remove unused variables which is annoying during development, pylint catches this anyway
-#lint.ignore = ["E501", "E902", "F841"]
+ignore = ["E501", "E902", "F841"]
 
 # Allow unused variables when underscore-prefixed.
-lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 # Same as Black.
 line-length = 100
