--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,11 @@ test = [
   "coverage",
 ]
 
+# Environments
+[tool.pixi.environments]
+default = { solve-group = "default" }
+test = { features = ["test"], solve-group = "default" }
+
 [tool.pixi.tasks]
 pr = "pixi install; git commit -a -m'update pixi.lock';git push"
 
@@ -42,15 +47,10 @@ pr = "pixi install; git commit -a -m'update pixi.lock';git push"
 fmt = "black ."
 lint = "ruff check . --fix ; pylint $(git ls-files '*.py')"
 test = "pytest"
-coverage = "run -m pytest"
+coverage = "coverage run -m pytest; coverage xml -o coverage.xml"
 
 [tool.setuptools.packages.find]
 include= ["python_template"]
-
-# Environments
-[tool.pixi.environments]
-default = { solve-group = "default" }
-test = { features = ["test"], solve-group = "default" }
 
 [tool.pylint]
 extension-pkg-whitelist = ["numpy"]
