--- a/3pyproject.toml
+++ b/3pyproject.toml
@@ -1,31 +1,28 @@
-[project]
-name = "python_template"
-version = "0.2.0"
-authors = [{ name = "Austin Gregg-Smith", email = "blooop@gmail.com" }]
-description = "A python package template"
-readme = "README.md"
-requires-python = ">=3.10"
 
-dependencies = []
-
-[project.optional-dependencies]
-test = [
-  "black>=23,<=24.4.2",
-  "pylint>=2.16,<=3.1.0",
-  "pytest-cov>=4.1,<=5.0.0",
-  "pytest>=7.4,<=8.2.0",
-  "hypothesis>=6.82,<=6.100.5",
-  "ruff>=0.0.280,<=0.4.3",
-  "coverage>=7.2.7,<=7.5.1",
-]
-
-[project.urls]
-Source = "https://github.com/blooop/python_template"
-Home = "https://github.com/blooop/python_template"
 
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
+
+[tool.pixi.dependencies]
+
+[tool.pixi.pypi-dependencies]
+python_template = { path = ".", editable = true }
+
+[project.optional-dependencies]
+test = [
+  "black",
+  "pylint",
+  "pytest-cov",
+  "pytest",
+  "hypothesis",
+  "ruff",
+  "coverage",
+]
 
 # Environments
 [tool.pixi.environments]
@@ -60,13 +57,13 @@ line-length = 100
 #"F841" will auto remove unused variables which is annoying during development, pylint catches this anyway
 ignore = ["E501", "E902", "F841"]
 
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
 # Same as Black.
 line-length = 100
 
 target-version = "py310"
-
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 # Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
 [tool.ruff.lint.per-file-ignores]
