--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,15 @@ requires-python = ">=3.10"
 
 dependencies = []
 
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
+
+[tool.pixi.dependencies]
+
+[tool.pixi.pypi-dependencies]
+python_template = { path = ".", editable = true }
+
 [project.optional-dependencies]
 test = [
   "black>=23,<=24.4.2",
