--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,14 +1,8 @@
-FROM mcr.microsoft.com/devcontainers/python:0-3.10
+ARG BASE_IMG="ubuntu:22.04"
+FROM $BASE_IMG
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    git-lfs \
+    jq \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN apt-get update && apt install git-lfs
-
-RUN python -m pip install --upgrade pip \
-    && python -m pip install 'flit>=3.8.0'
-
-ENV FLIT_ROOT_INSTALL=1
-
-COPY pyproject.toml .
-RUN touch README.md \
-    && mkdir -p src/python_template \
-    && python -m flit install --only-deps --deps develop \
-    && rm -r pyproject.toml README.md src
+COPY ./pixi.* /pixi/
