--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,18 @@
 {
-	"name": "python_template",
-	"build": {
-		"dockerfile": "Dockerfile",
-		"context": ".."
-	},
-	// "onCreateCommand": "pre-commit install --hook-type commit-msg",
-	"postCreateCommand": "flit install --symlink;",
-	"customizations": {
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": "..",
+    "args": {
+      "BASE_IMG": "ubuntu:22.04"
+    }
+  },
+  "features": {
+    "ghcr.io/brad-jones/pixi-devcontainer/pixi:latest": {
+      "version": "latest",
+      "workSpaceDir": "${containerWorkspaceFolder}"
+    }
+  },
+  "customizations": {
 		"vscode": {
 			"extensions": [
 				"ms-python.python",
@@ -23,5 +29,5 @@
 				"ryanluker.vscode-coverage-gutters"
 			]
 		}
-	},
+	}
 }
