--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,6 @@ python_template = { path = ".", editable = true }
 
 [project.optional-dependencies]
 test = [
-  "black>=23,<=24.8.0",
   "pylint>=3.2.5,<=3.2.7",
   "pytest-cov>=4.1,<=5.0.0",
   "pytest>=7.4,<=8.3.2",
@@ -64,7 +63,7 @@ devenv = { features = [
 ], solve-group = "devenv", no-default-feature = true }
 
 [tool.pixi.tasks]
-format = "black ."
+format = "ruff format ."
 check-clean-workspace = "git diff --exit-code"
 ruff-lint = "ruff check . --fix"
 pylint = "pylint --version && echo 'running pylint...' && pylint $(git ls-files '*.py')"
@@ -94,11 +93,8 @@ jobs = 16                           #detect number of cores
 disable = "C,logging-fstring-interpolation,line-too-long,fixme,broad-exception-caught,missing-module-docstring,too-many-instance-attributes,too-few-public-methods,too-many-arguments,too-many-locals,too-many-branches,too-many-statements,use-dict-literal,cyclic-import,duplicate-code,too-many-public-methods"
 enable = "no-else-return,consider-using-in"
 
-[tool.black]
-line-length = 100
-
 [tool.ruff]
-line-length = 100 # Same as Black.
+line-length = 100 
 
 target-version = "py310"
 
