--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ test = [
   "hypothesis>=6.104.2,<=6.116.0",
   "ruff>=0.5.0,<=0.7.2",
   "coverage>=7.5.4,<=7.6.4",
+  # "pre-commit>=3.8.0<=4.0.1"
 ]
 
 [build-system]
