--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ py313 = ["py313","test"]
 
 
 [tool.pixi.tasks]
+pre-commit = "pre-commit run -a"
 format = "black ."
 check-clean-workspace = "git diff --exit-code"
 ruff-lint = "ruff check . --fix"
