--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,18 +18,18 @@ repos:
     rev: v4.2.0
     hooks:
       - id: check-added-large-files
-      # - id: check-ast
-      # - id: check-case-conflict
-      # - id: check-docstring-first
+      - id: check-ast
+      - id: check-case-conflict
+      - id: check-docstring-first
       - id: check-merge-conflict
       - id: check-symlinks
       - id: check-yaml
         args: ['--unsafe']  # Fixes errors parsing custom jinja templates
       # - id: debug-statements
       - id: end-of-file-fixer
-      # - id: mixed-line-ending
+      - id: mixed-line-ending
       # - id: trailing-whitespace
-      # - id: fix-byte-order-marker
+      - id: fix-byte-order-marker
 
   # Formatter for python
   - repo: https://github.com/astral-sh/ruff-pre-commit
