update devcontainer pixi version

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
         "dockerfile": "Dockerfile",
         "context": "..",
         "args": {
-            "PIXI_VERSION": "v0.48.2"
+            "PIXI_VERSION": "v0.62.2"
         }
     },
     "customizations": {
@@ -22,7 +22,7 @@
         }
     },
 	"features": {
-		"ghcr.io/devcontainers/features/common-utils:2": {},
+		// "ghcr.io/devcontainers/features/common-utils:2": {},
     },
     "mounts": [
         "source=${localWorkspaceFolderBasename}-pixi,target=${containerWorkspaceFolder}/.pixi,type=volume"
