--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,7 @@
     },
 	"features": {
         "ghcr.io/devcontainers/features/node":{},
-		"./claude-code": {},
+		"./claude-code": {}
 
         // "ghcr.io/devcontainers/features/docker-in-docker:2": {}
 		// "ghcr.io/devcontainers/features/common-utils:2": {},
