--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,10 @@
 {
   "recommendations": [
-      "tamasfe.even-better-toml",
-      "ms-python.python",
-      "ms-python.vscode-pylance",
-      "jjjermiah.pixi-vscode",
-      "charliermarsh.ruff",
-      "tamasfe.even-better-toml",
-      "mhutchie.git-graph"
+    "mhutchie.git-graph",
+    "ms-python.python",
+    "ms-python.vscode-pylance",
+    "jjjermiah.pixi-vscode",
+    "charliermarsh.ruff",
+    "tamasfe.even-better-toml",
   ]
 }
