--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ platforms = ["linux-64"]
 python = ">=3.10"
 shellcheck = ">=0.10.0,<0.11"
 devpod = ">=0.8.0,<0.9"
+nodejs = ">=20"
+tmux = ">=3.4"
 
 [tool.pixi.feature.py310.dependencies]
 python = "3.10.*"
