update ty tasks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,8 +72,8 @@ format = "ruff format ."
 check-clean-workspace = "git diff --exit-code"
 ruff-lint = "ruff check . --fix"
 pylint = "pylint --version && echo 'running pylint...' && pylint $(git ls-files '*.py')"
-ty = "ty check"
-lint = { depends-on = ["ruff-lint", "pylint", "ty"] }
+ty = "ty check --respect-ignore-files ."
+lint = { depends-on = ["ruff-lint","ty", "pylint"] }
 style = { depends-on = ["format", "lint"] }
 commit-format = "git commit -a -m'autoformat code' || true"
 test = "pytest"
