--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -17,3 +17,6 @@ RUN echo 'eval "$(pixi completion -s bash)"' >> /home/vscode/.bashrc \
 
 # Create .ssh directory with proper permissions for SSH config mounts
 RUN mkdir -p /home/vscode/.ssh && chmod 700 /home/vscode/.ssh
+
+# Create .config/gh directory for GitHub CLI config mounts
+RUN mkdir -p /home/vscode/.config/gh
