--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,10 @@
     // },
     // "features": {
     //     "./claude-code": {}
+    //     "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+    //     "ghcr.io/devcontainers/features/common-utils:2": {},
+    //     "ghcr.io/anthropics/devcontainer-features/claude-code:1.0": {},
+    //     "ghcr.io/jsburckhardt/devcontainer-features/codex:latest": {}
     // },
 
     "initializeCommand": ".devcontainer/claude-code/init-host.sh",
