Add pixi task to migrate devcontainer to prebuilt GHCR image
New `pixi run dev-use-prebuilt` task that automates switching from
local builds to the prebuilt GHCR image:
- Detects repo owner/name from git remote
- Comments out build/features blocks in devcontainer.json
- Uncomments and sets the correct image reference
- Attempts to make the GHCR package public via gh CLI
- Idempotent: no-op if already using a prebuilt image

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,7 @@ ci-push = { depends-on = ["format", "ruff-lint", "update-lock", "ci", "push"] }
 clear-pixi = "rm -rf .pixi pixi.lock"
 setup-git-merge-driver = "git config merge.ourslock.driver true"
 update-from-template-repo = "./scripts/update_from_template.sh"
+dev-use-prebuilt = "./scripts/devcontainer_use_prebuilt.sh"
 
 [tool.pylint]
 extension-pkg-whitelist = ["numpy"]
