Default devcontainer to template's prebuilt image for fast startup
New repos from this template hit a chicken-and-egg problem: they can't
use their own prebuilt image because CI hasn't built it yet. Default to
the template's prebuilt image so new repos get fast startup immediately.

Three devcontainer states: template-prebuilt (default), local-build
(dev-use-local), and repo-prebuilt (dev-use-prebuilt). Fix awk bug in
both switching scripts where `if (/\}/)` matched `{}` inside feature
values like `"./claude-code": {}`, causing premature block termination.

- Default devcontainer.json to template prebuilt image
- Add dev-use-local script and pixi task
- Fix awk closing-brace patterns in both switching scripts
- Add docker-in-docker and common-utils features to CI devcontainer
- Protect template image URL in rename_project.sh
- Update README with three-state documentation table

--- a/.devcontainer/ci/devcontainer.json
+++ b/.devcontainer/ci/devcontainer.json
@@ -5,6 +5,8 @@
         "context": "../.."
     },
     "features": {
-        "../claude-code": {}
+        "../claude-code": {},
+        "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+        "ghcr.io/devcontainers/features/common-utils:2": {}
     }
 }
